# regify

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  basic_usage.py  concurrent_usage.py  factory_pattern.py  observer_pattern.py  plugin_system.py  run_all_examples.py  strategy_pattern.py
src/regify/: __init__.py  core.py  decorators.py  manager.py
tests/: conftest.py  test_core.py  test_decorators.py  test_error_cases.py  test_integration.py  test_manager.py  test_thread_safety.py
